# docs

./: .gitignore  404.html  Taskfile.yml  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml
docs/: privacy.md
privacy/: index.html
public/: 404.html
public/search/: search_index.json
search/: search_index.json
site/: index.html  sitemap.xml
site/privacy/: index.html
src/: index.md  privacy.md
