[project]
name = "fukuro-docs"
version = "0.1.0"
description = ""
authors = [{ name = "Sam Yao", email = "turisesonia@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["mkdocs (>=1.6.1,<2.0.0)", "mkdocs-material (>=9.6.4,<10.0.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
